cvs/ports/x11/kde4/marble/patches/patch-src_plugins_runner_kml_CMakeLists_txt,v
head	1.2;
access;
symbols
	OPENBSD_6_0:1.2.0.8
	OPENBSD_6_0_BASE:1.2
	OPENBSD_5_9:1.2.0.4
	OPENBSD_5_9_BASE:1.2
	OPENBSD_5_8:1.2.0.6
	OPENBSD_5_8_BASE:1.2
	OPENBSD_5_7:1.2.0.2
	OPENBSD_5_7_BASE:1.2
	OPENBSD_5_6:1.1.0.4
	OPENBSD_5_6_BASE:1.1
	OPENBSD_5_5:1.1.0.2
	OPENBSD_5_5_BASE:1.1;
locks; strict;
comment	@# @;


1.2
date	2015.01.05.22.30.54;	author dcoppa;	state Exp;
branches;
next	1.1;
commitid	uCZTgHuOfGU721ws;

1.1
date	2013.12.08.19.13.33;	author zhuk;	state Exp;
branches;
next	;


desc
@@


1.2
log
@
Fix for the following error:

<command-line>:0:13: warning: missing terminating " character [enabled by default]
/usr/ports/pobj/marble-4.14.2/marble-4.14.2/tests/TestGeoDataWriter.cpp:52:5: error: stray '\' in program
     dataDir = QDir( TESTSRCDIR );
     ^
/usr/ports/pobj/marble-4.14.2/marble-4.14.2/tests/TestGeoDataWriter.cpp:52:5: error: missing terminating " character

...And regen patches while here.
@
text
@$OpenBSD: patch-src_plugins_runner_kml_CMakeLists_txt,v 1.1 2013/12/08 19:13:33 zhuk Exp $
--- src/plugins/runner/kml/CMakeLists.txt.ports.orig	Mon Oct  6 00:35:01 2014
+++ src/plugins/runner/kml/CMakeLists.txt	Mon Jan  5 16:23:32 2015
@@@@ -17,6 +17,7 @@@@ marble_set_package_properties( quazip PROPERTIES DESCR
 marble_set_package_properties( quazip PROPERTIES URL "http://quazip.sourceforge.net/" )
 marble_set_package_properties( quazip PROPERTIES TYPE OPTIONAL PURPOSE "reading and displaying .kmz files" )
 if( QUAZIP_FOUND )
+  include_directories( ${QUAZIP_INCLUDE_DIR} )
   add_definitions( -DMARBLE_HAVE_QUAZIP )
   include_directories( ${QUAZIP_INCLUDE_DIR} )
   set( kml_SRCS ${kml_SRCS} KmzHandler.cpp )
@


1.1
log
@Move on to KDE 4.11.4.

In this release, four "fat" packages were split:

  * kdeadmin
  * kdenetwork
  * kdesdk
  * kdetoys

To make updates reliable, we provide corresponding meta-packages now.

Many new patches in x11/kde4 correspond to the linking problems detected.
Those are planned to integrate upstream but probably we'll have to keep
some of them until KDE 5.

For information about major KDE 4.11 features, look at the official site:
http://www.kde.org/announcements/4.11/

Kopete Jingle support is disabled for now, until googletalk-call gets
cured from permanent coredumping.

This update involved a lot of help and patience for my mistakes from
many people, including ajacoutot@@, espie@@, naddy@@... but most of the
times this was landry@@ who definitely deserves personal "thank you"!
@
text
@d1 4
a4 4
$OpenBSD$
--- src/plugins/runner/kml/CMakeLists.txt.ports.orig	Thu Nov  7 17:48:16 2013
+++ src/plugins/runner/kml/CMakeLists.txt	Thu Nov  7 17:49:14 2013
@@@@ -15,6 +15,7 @@@@ marble_set_package_properties( quazip PROPERTIES DESCR
d10 1
a11 1
   set( KmlPlugin_LIBS ${QUAZIP_LIBRARIES} )
@

